# codecrafters-redis-python

./: .gitignore  README.md  pyproject.toml  your_program.sh
.codecrafters/: run.sh
app/: data.py  main.py  rdb.py  resp.py  server.py
tests/: tcp_server.py  test_redis_tcp.py  test_resp_parser.py  test_tcp_server.py
